# Shashmaqam-Finder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
AudioModule/: AudioConsts.hpp  AudioConverter.cpp  AudioConverter.hpp  AudioExceptions.cpp  AudioRecorder.cpp  AudioRecorder.hpp
DB/: Database.cpp  Database.hpp  Utils.cpp  Utils.hpp
FingerPrint/: Constants.hpp  FingerPrint.cpp  FingerPrint.hpp
Math/: Constants.hpp  FastFourierTransform.cpp  FastFourierTransform.h  FastFourierTransform.hpp  Field.cpp  Field.h  Field.hpp  Spectrogram.cpp  Spectrogram.hpp
UI/: Button.cpp  Button.hpp  PopUp.cpp  PopUp.hpp  ShazamUI.cpp  ShazamUI.hpp  UIConstants.hpp  UIManager.cpp  UIManager.hpp
